--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@tanstack/react-query": "^5.17.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.21.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
